Invisible link in footer area - fix

--- a/inc/scss/_module.scss
+++ b/inc/scss/_module.scss
@@ -1298,6 +1298,9 @@ svg#vert-logo {
       text-align: right;
     }
     
+    a{
+        color: white;
+    }
     &__chat {
         position: absolute;
         right: 2em;
